remove seller layout, manage product details page should use home product details page, product list page centered table remove other column, fix smtpclient send email error implement lock object

--- a/AspMVCECommerce/Views/Account/ForgotPassword.cshtml
+++ b/AspMVCECommerce/Views/Account/ForgotPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AspMVCECommerce.Models.ForgotPasswordViewModel
 @{
-    Layout = "~/Views/Shared/_SellerLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Forgot your password?";
 }
 
