--- a/AspMVCECommerce/Views/Account/Login.cshtml
+++ b/AspMVCECommerce/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@using AspMVCECommerce.Models
 @model LoginViewModel
 @{
-    Layout = "~/Views/Shared/_SellerLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Log in";
 }
 
