--- a/AspMVCECommerce/Views/Account/RegisterRole.cshtml
+++ b/AspMVCECommerce/Views/Account/RegisterRole.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AspMVCECommerce.Models.RegisterViewModel
 @{
     ViewBag.Title = "RegisterRole";
-    Layout = "~/Views/Shared/_SellerLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <!-- BREADCRUMB -->
 <div id="breadcrumb" class="section breadcrumbx" style="display: flex;">
