--- a/AspMVCECommerce/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/AspMVCECommerce/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "~/Views/Shared/_SellerLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Forgot Password Confirmation";
 }
 
