--- a/AspMVCECommerce/Views/Account/Register.cshtml
+++ b/AspMVCECommerce/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AspMVCECommerce.Models.RegisterViewModel
 @{
-    Layout = "~/Views/Shared/_SellerLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Register";
 }
 
