--- a/AspMVCECommerce/Views/Products/Create.cshtml
+++ b/AspMVCECommerce/Views/Products/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AspMVCECommerce.ViewModel.ProductViewModel
 @using Microsoft.Web.Helpers;
 @{
-    Layout = "~/Views/Shared/_SellerLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Create";
 }
 
