--- a/AspMVCECommerce/Views/Products/Delete.cshtml
+++ b/AspMVCECommerce/Views/Products/Delete.cshtml
@@ -2,42 +2,28 @@
 
 @{
     ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_SellerLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
+
 <!-- BREADCRUMB -->
-<div id="breadcrumb" class="section breadcrumbx" style="display: flex;">
-    <div class="container">
-
-        <div class="row pull-left" >
-            <div class="col-md-12">
-                <ul class="breadcrumb-tree">
-                    <li> <a href="#" style="font-size: 16px; font-weight: bold; white-space: nowrap; ">Manage Product</a></li>
-
-                </ul>
-
-            </div>
-        </div>
-
-    </div>
-
-
+<div id="breadcrumb" class="section">
     <!-- container -->
-    <div class="container" style="margin-left:200px;">
+    <div class="container">
         <!-- row -->
         <div class="row">
             <div class="col-md-12">
+                <h3 class="breadcrumb-header">Manage Product</h3>
                 <ul class="breadcrumb-tree">
                     <li><a href="~/Home/Index">Home</a></li>
                     <li><a href="~/Products/Index">Products</a></li>
                     <li>Delete</li>
-                    <li class="active">Product Id: @Html.DisplayFor(model => model.ProductId)</li>
+                    <li class="active">Id: @Html.DisplayFor(model => model.ProductId)</li>
                 </ul>
 
                 <ul class="breadcrumb-tree pull-right">
                     <li>@Html.ActionLink("Back to List", "Index")</li>
-
                 </ul>
             </div>
         </div>
@@ -46,116 +32,128 @@
     <!-- /container -->
 </div>
 <!-- /BREADCRUMB -->
-
+<!-- SECTION -->
 <div class="section">
     <!-- container -->
     <div class="container">
+        <!-- row -->
+        <div class="row">
+
+            <div class="col-md-12">
+
+                <h3>Are you sure you want to delete this?</h3>
+                <div>
+                    <h4>Product</h4>
+                    <hr />
+                    <dl class="dl-horizontal">
 
 
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Name)
+                        </dt>
 
+                        <dd>
+                            @Html.DisplayFor(model => model.Name)
+                        </dd>
 
-        <h3>Are you sure you want to delete this?</h3>
-        <div>
-            <h4>Product</h4>
-            <hr />
-            <dl class="dl-horizontal">
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Description)
+                        </dt>
 
+                        <dd class="class-dd">
+                            @Html.DisplayFor(model => model.Description)
+                        </dd>
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.Name)
-                </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Details)
+                        </dt>
 
-                <dd>
-                    @Html.DisplayFor(model => model.Name)
-                </dd>
+                        <dd class="class-dd">
+                            @Html.DisplayFor(model => model.Details)
+                        </dd>
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.Description)
-                </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.OriginalPrice)
+                        </dt>
 
-                <dd class="class-dd">
-                    @Html.DisplayFor(model => model.Description)
-                </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.OriginalPrice)
+                        </dd>
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.Details)
-                </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.DiscountedPrice)
+                        </dt>
 
-                <dd class="class-dd">
-                    @Html.DisplayFor(model => model.Details)
-                </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.DiscountedPrice)
+                        </dd>
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.OriginalPrice)
-                </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Stock)
+                        </dt>
 
-                <dd>
-                    @Html.DisplayFor(model => model.OriginalPrice)
-                </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.Stock)
+                        </dd>
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.DiscountedPrice)
-                </dt>
+                        <dt>
+                            Category
+                        </dt>
 
-                <dd>
-                    @Html.DisplayFor(model => model.DiscountedPrice)
-                </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.Category.Name)
+                        </dd>
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.Stock)
-                </dt>
+                        <dt>
+                            Brand
+                        </dt>
 
-                <dd>
-                    @Html.DisplayFor(model => model.Stock)
-                </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.Brand.Name)
+                        </dd>
+                    </dl>
 
-                <dt>
-                    Category
-                </dt>
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
 
-                <dd>
-                    @Html.DisplayFor(model => model.Category.Name)
-                </dd>
+                        <div class="form-actions no-color">
+                            <input type="submit" value="Delete" class="btnx btn-defaultx" style="width: 150px; height: 40px;" />
 
-                <dt>
-                    Brand
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.Brand.Name)
-                </dd>
-            </dl>
-
-            @using (Html.BeginForm())
-            {
-                @Html.AntiForgeryToken()
-
-                <div class="form-actions no-color">
-                    <input type="submit" value="Delete" class="btnx btn-defaultx" style="width: 150px; height: 40px;" />
-
+                        </div>
+                    }
                 </div>
-            }
+
+
+            </div>
+
+
         </div>
+        <!-- /row -->
     </div>
     <!-- /container -->
+
 </div>
-<!-- /section -->
+<!-- /SECTION -->
+
+
+
 
 
 @section Scripts {
     <script type="text/javascript">
-            $(document).ready(function () {
+        $(document).ready(function () {
 
-                $(".class-dd").each(function (index) {
-                    /* var imageDefaultId = $(this).attr("image-id") + ".Default";*/
+            $(".class-dd").each(function (index) {
+                /* var imageDefaultId = $(this).attr("image-id") + ".Default";*/
 
-                    let ddInnerText = $(this).html($(this).prop("innerText")).prop("innerText");
-                    $(this).text( $(this).html(ddInnerText).text());
-
-                });
-
+                let ddInnerText = $(this).html($(this).prop("innerText")).prop("innerText");
+                $(this).text($(this).html(ddInnerText).text());
 
             });
+
+
+        });
     </script>
 }
 
