--- a/AspMVCECommerce/Views/Home/Product.cshtml
+++ b/AspMVCECommerce/Views/Home/Product.cshtml
@@ -2,7 +2,7 @@
 @using System.Linq;
 @using System.Collections.Generic;
 @using Microsoft.AspNet.Identity;
-@using AspMVCECommerce.Models;;
+@using AspMVCECommerce.Models;
 
 @{
     ViewBag.Title = "Product";
