--- a/AspMVCECommerce/Views/Products/Create.cshtml
+++ b/AspMVCECommerce/Views/Products/Create.cshtml
@@ -434,23 +434,104 @@
             if ($("#PromoSaleOFF").val() != '') {
                 var percentText1 = parseInt(parseFloat($("#PromoSaleOFF").val()) * 100).toString() + "% OFF";
                 $('#PromoSaleOFFPercent').text(percentText1);
+
+                var discountedPrice = parseInt($('#OriginalPrice').val()) - (parseInt($('#OriginalPrice').val()) * parseFloat($("#PromoSaleOFF").val()))
+                $('#DiscountedPrice').text(discountedPrice.toString());
+                
             }
 
             $('#PromoSaleOFF').on('input', function (e) {
                 if (this.value != '') {
+
                     var percentText = parseInt(parseFloat(this.value) * 100).toString() + "% OFF";
+
+
+
                     $('#PromoSaleOFFPercent').text(percentText);
                     if (parseFloat(this.value) > 0 && parseFloat(this.value) <= 1) {
+
+                        var discountedPrice = parseInt($('#OriginalPrice').val()) - (parseInt($('#OriginalPrice').val()) * parseFloat(this.value));
+                        $('#DiscountedPrice').val(discountedPrice.toString());
+
                         $("#PromoDurationDiv").show();
+
+                        $("#DiscountedPrice").attr("disabled", false);
+                        $("#DiscountedPrice").attr("style", "background-color: white;");
                     }
                     else {
                         $("#PromoDurationDiv").hide();
+
+                        $("#DiscountedPrice").val("");
+                        $("#DiscountedPrice").attr("disabled", true);
+                        $("#DiscountedPrice").attr("style", "background-color: #E4E7ED;");
                     }
                 }
                 else {
                     $("#PromoDurationDiv").hide();
                     $('#PromoSaleOFFPercent').text("0% OFF");
+
+                    $("#DiscountedPrice").val("");
+                    $("#DiscountedPrice").attr("disabled", true);
+                    $("#DiscountedPrice").attr("style", "background-color: #E4E7ED;");
                 }
+            });
+
+            $("#DiscountedPrice").attr("disabled", true);
+            $("#DiscountedPrice").attr("style", "background-color: #E4E7ED;");
+
+            $("#PromoSaleOFF").attr("disabled", true);
+            $("#PromoSaleOFF").attr("style", "background-color: #E4E7ED;");
+
+            $('#OriginalPrice').on('input', function (e) {
+                if (this.value != '') {
+
+        
+
+                    if (this.value > 0) {
+                        //$("#DiscountedPrice").attr("disabled", false);
+                        //$("#DiscountedPrice").attr("style", "background-color: white;");
+
+
+                        $("#DiscountedPrice").prop('min', 0);
+                        $("#DiscountedPrice").prop('max', parseInt(this.value));
+
+
+                        $("#PromoSaleOFF").attr("disabled", false);
+                        $("#PromoSaleOFF").attr("style", "background-color: white;");
+                    }
+                    else {
+  
+                        $("#DiscountedPrice").attr("disabled", true);
+                        $("#DiscountedPrice").attr("style", "background-color: #E4E7ED;");
+
+                        $("#PromoSaleOFF").attr("disabled", true);
+                        $("#PromoSaleOFF").attr("style", "background-color: #E4E7ED;");
+                    }
+                }
+                else {
+                    $("#DiscountedPrice").attr("disabled", true);
+                    $("#DiscountedPrice").attr("style", "background-color: #E4E7ED;");
+
+                    $("#PromoSaleOFF").attr("disabled", true);
+                    $("#PromoSaleOFF").attr("style", "background-color: #E4E7ED;");
+                }
+            });
+
+
+            $('#DiscountedPrice').on('input', function (e) {
+                if (this.value != '') {
+
+                    var _discountedPrice = parseInt(parseFloat(this.value) * 100);
+                    var _origPrice = parseInt($('#OriginalPrice').val());
+                    if (_discountedPrice > _origPrice) {
+                        //$("#DiscountedPrice").attr("disabled", false);
+                        //$("#DiscountedPrice").attr("style", "background-color: white;");
+
+                        return false;
+                    }
+
+                }
+   
             });
 
 
